--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Path Finding Visualizer</h1>
     </div>
     <nav>
-      <button class="start nav" onClick="start()">Start(S)</button>
+      <button class="start nav" onClick="start()">Start</button>
       <button class="refresh nav" onClick="refresh();">Refresh</button>
     </nav>
     <div class="container"></div>
